--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -55,3 +55,20 @@ table th {
     bottom: 0;
     background: rgba(0, 0, 0, 0.5);
 }
+
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in;
+}
