--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,14 @@
 @tailwind utilities;
 @import "~react-image-gallery/styles/css/image-gallery.css";
 
+.image-gallery-swipe {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.product .image-gallery-image{
+.image-gallery-image{
     max-height: 400px!important;
 }
 .image-gallery-thumbnail-image{
@@ -20,22 +26,3 @@
 .ant-modal-footer{
   display: none!important;
 }
-
-.ant-table-container{
-  height: auto;
-}
-
-.image-gallery-right-nav .image-gallery-svg {
-  height: 60px;
-  width: 60px;
-}
-
-.image-gallery-left-nav .image-gallery-svg {
-  height: 60px;
-  width: 60px;
-  
-}
-
-
-
-
